name:                the-one-and-only-coercive
version:             0.1.33.7
synopsis:            A fun and secure data analysis framework
description:         We use docker for deployment. Please see README.md for
                     setup instructions!
license:             BSD3
license-file:        LICENSE
author:              niklasb
maintainer:          niklasb
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable coercive
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       DataAnalysis
                       Report
                       Utils
                       Views.Home
                       Views.Report
                       Views.Site
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Chart
                     , Chart-cairo
                     , Spock
                     , base64-bytestring
                     , blaze-bootstrap
                     , blaze-html
                     , bytestring
                     , colour
                     , cryptonite
                     , data-default-class
                     , directory
                     , filepath
                     , html-entities
                     , lens
                     , mtl
                     , neat-interpolation
                     , plugins
                     , process
                     , text
                     , time
                     , transformers
                     , unix
                     , wai-middleware-static
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:niklasb/coercive.git
